# tree-sitter-scl

./: .gitignore  CMakeLists.txt  Cargo.toml  MANIFEST.in  Makefile  README.md  go.mod  grammar.js  package.json  parser.exp  parser.lib  pyproject.toml  scl_parser_gui.py  setup.py  test_parser.py  tree-sitter.json
bindings/go/: binding_test.go
bindings/node/: index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_scl/: __init__.py  _binding.cp312-win_amd64.pyd  _binding.pyd
bindings/python/tree_sitter_scl.egg-info/: SOURCES.txt  top_level.txt
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSclTests/: TreeSitterSclTests.swift
examples/: AHU1_AE1_Data.db  CycleTime.udt  simple.db
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: udt.txt
tree_sitter_scl.egg-info/: PKG-INFO
